--- a/scss/_constructors.scss
+++ b/scss/_constructors.scss
@@ -1,4 +1,4 @@
-.button, .button:hover, .button:active {
+.button, .button:hover, .button:active, .button:visited {
   padding: .5rem 1.5rem;
   border-radius: 5px;
   font-family: Poppins;
